--- a/style.css
+++ b/style.css
@@ -47,11 +47,11 @@ body {
   top: 5em;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 60vh;
   z-index: -1;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   gap: 12.5rem;
 }
@@ -78,6 +78,8 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+  overflow-x: hidden;
 }
 
 .top_content {
@@ -93,7 +95,9 @@ header {
 }
 
 .decoration2 {
- align-self: flex-end;
+margin-left: 1100px;
+position: absolute;
+top: 1560px;
 }
 
 .logoDepzon {
